--- a/Views/Project/Index.cshtml
+++ b/Views/Project/Index.cshtml
@@ -186,7 +186,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content p-3">
                 <div class="modal-header">
-                    <h5 class="modal-title">Assign Permissions</h5>
+                    <h5 class="modal-title">Add SubProject</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span>&times;</span>
                     </button>
